k8s/config/arcl-cmp/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: arcl-cmp
  labels:
    prod-gateway-access: "true"
